# NextClientServerApi

./: CMakeLists.txt  README.md
addons/amxmodx/scripting/: test_nextclient_api.sma
addons/amxmodx/scripting/include/: next_client_api.inc
amxx_test/addons/amxmodx/scripting/: test_nextclient_api.sma
public/: api.h  moduleconfig.h
public/api/: INextClientAPI.h  const.h  cvar_sandbox.h  nclm_proto.h  nextclient.h  private_precache.h  viewmodelfx.h
scripting/: next_client_api.sma  next_client_api_example.sma
scripting/include/: next_client_api.inc
scripting/include/next_client_api/: private_precache.inc  viewmodelfx.inc
src/: EventManager.cpp  EventManager.h  SizeBufWriter.h  asserts.h  events.h  main.cpp  main.h  rehlds_api.cpp  rehlds_api.h  utilfuncs.cpp  utilfuncs.h
src/api/: HealthNext.cpp  NclmProtocol.cpp  NclmProtocol.h  NextClientApi.cpp  NextClientApi.h  PrivatePrecache.cpp  Verificator.cpp  Verificator.h  cvar_sandbox.cpp  cvar_sandbox.h  events.h  health_next.cpp  health_next.h  impl.cpp  impl.h  private_precache.cpp  private_precache.h  verificator.cpp  verificator.h  viewmodelfx.cpp  viewmodelfx.h
src/natives/: cvar_sandbox.cpp  helpers.h  natives.cpp  natives.h  nextclient.cpp  private_precache.cpp  viewmodelfx.cpp
test_resources/sprites/test_nextclient/: hud.txt  weapon_ak47.txt  weapon_aug.txt  weapon_awp.txt  weapon_c4.txt  weapon_deagle.txt  weapon_elite.txt  weapon_famas.txt  weapon_fiveseven.txt  weapon_flashbang.txt  weapon_g3sg1.txt  weapon_galil.txt  weapon_glock18.txt  weapon_hegrenade.txt  weapon_knife.txt  weapon_m249.txt  weapon_m3.txt  weapon_m4a1.txt  weapon_mac10.txt  weapon_mp5navy.txt  weapon_p228.txt  weapon_p90.txt  weapon_scout.txt  weapon_sg550.txt  weapon_sg552.txt  weapon_shield.txt  weapon_shieldgun.txt  weapon_smokegrenade.txt  weapon_tmp.txt  weapon_ump45.txt  weapon_usp.txt  weapon_xm1014.txt
